Added Get Put Post REST methods with tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.contexts=dev
-spring.liquibase.database-change-log-lock-table=DATABASECHANGELOGLOCK
-spring.liquibase.database-change-log-table=DATABASECHANGELOG
-spring.liquibase.drop-first=false
+# MySQL Connection Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=salesman
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
